# offchain-auction-boilerplate

./: .env.example  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/handlers/: orders.rs  ws.rs
src/db/: mod.rs
src/models/: mod.rs
src/state/: mod.rs
test-client/: script.js
tests/: integration_test.rs
