[package]
name = "offchain-auction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20", features = ["ws", "headers"] }
tracing-subscriber = "0.3.17"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
dotenvy = "0.15.7"
envy = "0.4.2"
redis = { version = "0.23.1", features = ["tokio-comp"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
futures = "0.3.28"
mime = "0.3"


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
